# FCGR-CNN

./: FCGR.py  README.md  filter_data.py  pyproject.toml  requirements.txt  transcript_to_genomic.py  utils.py
clinvar-data-processing/: grch38loc_validator.py  transcript_to_genomic.py
genome-data-processing/: filter_nc_accessions.py  genome_processing.py  placeholder.py
pipeline/: FCGR.py  config.py  run.py  utils.py
pipeline/cli/: prompts.py
pipeline/clinvar/: chunks_preprocessor.py  filter_clinvar_data.py  preprocess_chunks.py  run_base_validator.py  transcript_to_genomic.py  update_loc_ns.py  validators.py
pipeline/genome/: extract_sequences.py  filter_nc_accessions.py  handle_ns.py  ns_handler.py  ns_handler_run.py  read_chr.py  sequence_extractor.py
pipeline/image_creation/: fcgr_utils.py
tests/cli/: test_prompts.py
